# darker

./: CHANGES.rst  README.rst  pyproject.toml  setup.cfg  setup.py
src/darker/: __main__.py  git.py  linting.py
src/darker/tests/: test_git.py  test_linting.py  test_main.py
