[metadata]
name = darker
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
summary = Apply Black formatting only in regions changed since last commit
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/akaihola/darker
license = BSD
license_file = LICENSE.rst
requires-python = >=3.6
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/akaihola/darker
    Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst

[options]
install_requires =
    black>=20.8b1
    toml
    typing-extensions ; python_version < "3.8"
    dataclasses ; python_version < "3.7"

[files]
packages =
    darker
packages_root = src

[entry_points]
console_scripts =
    darker = darker.__main__:main_with_error_handling

[options.extras_require]
isort =
    isort>=5.0.1
test =
    mypy>=0.910
    pylint
    pytest>=6.1.0
    pytest-darker
    pytest-flake8>=1.0.6
    pytest-isort>=1.1.0
    pytest-kwparametrize>=0.0.3
    pytest-mypy
    pygments
    types-dataclasses ; python_version < "3.7"
    types-toml>=0.1.3

[flake8]
# Line length according to Black rules
max-line-length = 88
# Ignore rules which conflict with Black
ignore =
    # E231 missing whitespace after ','
    E231
    # W503 line break before binary operator
    W503
